--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -65,7 +65,7 @@
 {% endif %}
 
 {% if true %}
-  <meta property="og:image" content="{{ page_large_image }}">
+  <meta property="og:image" content="https://raw.githubusercontent.com/adamlawson99/SiteImages/master/Images/computer.png">
 {% elsif page_teaser_image %}
   <meta property="og:image" content="{{ page_teaser_image }}">
 {% endif %}
