--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -32,7 +32,7 @@
   {%- assign author_twitter = author.twitter | replace: "@", "" -%}
 {%- endif -%}
 
-{%- assign page_large_image = page.header.og_image | default: page.header.overlay_image | absolute_url -%}
+{%- assign page_large_image = page.header.og_image | default: page.header.overlay_image | default: page.header.image | absolute_url -%}
 {%- assign page_large_image = page_large_image | escape -%}
 
 {%- assign page_teaser_image = page.header.teaser | default: site.og_image | absolute_url -%}
@@ -64,8 +64,8 @@
   <meta property="og:description" content="{{ seo_description }}">
 {% endif %}
 
-{% if true %}
-  <meta property="og:image" content="https://raw.githubusercontent.com/adamlawson99/SiteImages/master/Images/computer.png">
+{% if page_large_image %}
+  <meta property="og:image" content="{{ page_large_image }}">
 {% elsif page_teaser_image %}
   <meta property="og:image" content="{{ page_teaser_image }}">
 {% endif %}
