--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -54,7 +54,7 @@
   <meta name="author" content="{{ author.name | default: author }}">
 {% endif %}
 
-<meta property="og:image" content="{{ site.og_image }}">
+<meta property="og:image" content="{{ site.url }}/assets/images/computer.jpg">
 <meta property="og:type" content="{{ og_type }}">
 <meta property="og:locale" content="{{ site.locale | replace: "-", "_" | default: "en_US" }}">
 <meta property="og:site_name" content="{{ site.title }}">
